@author Adrian Buerki <ad@illfounded.net>

beta 5
- Added Export to CSV feature.
- Jumped to Java 1.5 (rc1) and was forced to make some adaptations.
- Enhanced the application with a very basic settings dialog.
- JCalendar (wannawork.de) is discontinued, moved to NachoCalendar (nachocalendar.sourceforge.net).

beta 4
- Some source code clean up.
- Settings are loaded form administration file now.
- An empty administration.xml file will be created if non exists.
- Some deprecated methods replaced.
- Some XML specific methods changed as to Java 1.5 (beta2).

beta 3
- Some source code clean up.
- Checking integrity before a delete operation is executed (that was a nasty bug).

beta 2
- Some source code clean up.
- Improved evaluation.