@@ -21,40 +21,37 @@ import java.awt.event.ActionEvent;
 
 import javax.swing.AbstractAction;
 import javax.swing.Action;
+import javax.swing.JOptionPane;
 
 import net.illfounded.jpulsemonitor.JPulsemonitor;
-import net.illfounded.jpulsemonitor.view.JTrainingDialog;
+import net.illfounded.jpulsemonitor.view.JErrorDialog;
+import net.illfounded.jpulsemonitor.xml.XMLAdminFileHandler;
 import net.illfounded.jpulsemonitor.xml.XMLResourceBundle;
-import net.illfounded.jpulsemonitor.xml.dataobject.TrainingDO;
-
+import net.illfounded.jpulsemonitor.xml.dataobject.UserDO;
 
 /**
  * @author Adrian Buerki <ad@illfounded.net>
  *
  * An impementation of an <code>Action</code>, which offers centralized control of functionality
- * and broadcast of property changes. The <code>NewTrainingAction</code> handles all events
- * related to the creation of a new training entity in the adminstration xml-file.
+ * and broadcast of property changes. The <code>DeleteUserAction</code> handles all events
+ * related to the deletation of a user in the adminstration xml-file.
  */
-public class NewTrainingAction extends AbstractAction {
+public class DeleteUserAction extends AbstractAction {
 	// Eclipse generated serialVersionUID
-	private static final long serialVersionUID = 4181361335132164088L;
+	private static final long serialVersionUID = -2585459039640071689L;
 
 	private JPulsemonitor _monitor;
     
     /**
-     * Creates a new NewTrainingAction
+     * Creates a new DeleteExerciseAction
      */
-    public NewTrainingAction(JPulsemonitor monitor) {
+    public DeleteUserAction(JPulsemonitor monitor) {
         super( );
         _monitor = monitor;
         XMLResourceBundle bndl = _monitor.getResourceBundle();
         
-        putValue(Action.NAME, bndl.getString("but.addtraining") );
-		putValue(Action.SHORT_DESCRIPTION, bndl.getString("tooltip.addtraining"));
-		
-		// Resolve mnemonic from resource bundle
-		char mneKey = bndl.getString("menu.edit.newtraining.mneKey").charAt(0);
-		putValue(Action.MNEMONIC_KEY, new Integer(mneKey));
+        putValue(Action.NAME, bndl.getString("but.deleteexercise") );
+		putValue(Action.SHORT_DESCRIPTION, bndl.getString("tooltip.deleteexercise"));
     }
 
     /**
@@ -63,15 +60,38 @@ public class NewTrainingAction extends AbstractAction {
      * @param e A semantic event which indicates that a component-defined action occured
      */
     public void actionPerformed(ActionEvent e) {
-        TrainingDO trainingDO = JTrainingDialog.showTrainingDialog(_monitor);
+        UserDO userDO = _monitor.getMainFrame().getAdminPanel().getSelectedUser();
         
-        if (trainingDO == null) {
+        if (userDO == null) {
             return;
         }
         
-        _monitor.getAdminFileHandler().createNewTraining(trainingDO);
-        _monitor.getMainFrame().getAdminPanel().refreshTraining();
+        XMLAdminFileHandler adminFH = _monitor.getAdminFileHandler();
+        XMLResourceBundle bndl = _monitor.getResourceBundle();
         
+        if(adminFH.getDefaultUser().equals(userDO)) {
+        	JOptionPane.showMessageDialog(_monitor.getMainFrame(),bndl.getString("dlg.deleteDUser.msg"));
+        	return;
+        }
+            
+        int retV = JOptionPane.showConfirmDialog(_monitor.getMainFrame(), bndl.getString("dlg.deleteUser.msg"), bndl.getString("dlg.delete.title"),
+                    JOptionPane.YES_NO_OPTION);
+
+        if (retV == JOptionPane.NO_OPTION) {
+            return;
+        }
+        
+        String id = userDO.getIdentification();
+      
+        try {
+            _monitor.getAdminFileHandler().deleteNode(id);
+        } catch (Exception exe) {
+            new JErrorDialog(_monitor.getMainFrame(), exe);
+            return;
+        }
+        
+        _monitor.getMainFrame().getAdminPanel().refreshUser();
+
         // Cause the userlists and trainings to be reread, if become visible
         _monitor.getMainMediator().setAdminUpdated(true);
     }
